Fix article-form fields overflow animation

--- a/module-2-blog-app/src/app/ui/pages/blog-page/article-form/article-form.scss
+++ b/module-2-blog-app/src/app/ui/pages/blog-page/article-form/article-form.scss
@@ -22,6 +22,10 @@
         transform: translateY(0);
       }
     }
+
+    &.is-visible {
+      overflow: visible;
+    }
   }
 
   &-content {
